languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/CheckLearningParameterCombination2.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration CheckLearningParameterCombination2 {
    learning_method : reinforcement

    agent_name : "reinforcement-agent"

    environment : gym { name:"CartPole-v1" }

    context : cpu

    num_episodes : 300
    num_max_steps : 9999
    discount_factor : 0.998
    target_score : 1000
    training_interval : 10

    normalize : false

    batch_size : 100

    num_epoch : 10
}
